@@ -1,3 +1,5 @@
+* Use today as fallback for sale date report
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 * Add reporting
